--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
 </head>
 <body>
     <div class="container">
+        <!-- ★★★ ヘッダー構造を変更 ★★★ -->
         <header>
-            <h1>マスター、コーヒー淹れてよ・改・改・改 テキスト化ツール</h1>
-            <!-- ★★★ ダークモードスイッチを追加 ★★★ -->
-            <div class="theme-switcher">
-                <label for="theme-toggle" class="theme-toggle-label">ダークモード</label>
-                <label class="switch">
-                    <input type="checkbox" id="theme-toggle">
-                    <span class="slider round"></span>
-                </label>
+            <div class="header-content">
+                <h1>マスター、コーヒー淹れてよ・改・改・改 テキスト化ツール</h1>
+                <div class="theme-switcher">
+                    <label for="theme-toggle" class="theme-toggle-label">ダークモード</label>
+                    <label class="switch">
+                        <input type="checkbox" id="theme-toggle">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
             </div>
         </header>
 
         <main>
+            <!-- (mainタグ以下は変更なし) -->
             <div id="settings-area">
                 <fieldset class="control-group">
                     <legend>ジャンル</legend>
-                    <div id="genre-selector" class="radio-group">
-                        <!-- ラジオボタンはここに挿入されます -->
-                    </div>
+                    <div id="genre-selector" class="radio-group"></div>
                 </fieldset>
-
                 <fieldset class="control-group">
                     <legend>ダイス目</legend>
                     <div id="dice-inputs" class="input-group">
@@ -38,22 +38,13 @@
                     </div>
                 </fieldset>
             </div>
-
             <div class="button-area">
                 <button id="generate-button">テキスト化！</button>
             </div>
-            
             <div class="options-area">
-                <label>
-                    <input type="checkbox" id="reset-checkbox" checked>
-                    完了後に入力欄をリセット
-                </label>
-                <label>
-                    <input type="checkbox" id="autocopy-checkbox" checked>
-                    結果を自動でコピーする
-                </label>
+                <label><input type="checkbox" id="reset-checkbox" checked>完了後に入力欄をリセット</label>
+                <label><input type="checkbox" id="autocopy-checkbox" checked>結果を自動でコピーする</label>
             </div>
-
             <div class="result-area">
                 <div class="result-header">
                     <label for="result-text">結果</label>
@@ -63,7 +54,6 @@
             </div>
         </main>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
