--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>マスター、コーヒー淹れてよ・改・改・改 テキスト化ツール</title>
+    <!-- ★★★ タイトルタグも修正 ★★★ -->
+    <title>マスター、コーヒー淹れてよ テキスト化ツール</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <!-- ★★★ ヘッダー構造を変更 ★★★ -->
         <header>
             <div class="header-content">
-                <h1>マスター、コーヒー淹れてよ・改・改・改 テキスト化ツール</h1>
+                <!-- ★★★ タイトルテキストと改行を修正 ★★★ -->
+                <h1>マスター、コーヒー淹れてよ<br>テキスト化ツール</h1>
                 <div class="theme-switcher">
                     <label for="theme-toggle" class="theme-toggle-label">ダークモード</label>
                     <label class="switch">
