88版メニュー追加

--- a/ver_88/index.html
+++ b/ver_88/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="header-content">
                 <!-- ★★★ タイトルテキストと改行を修正 ★★★ -->
-                <h1>マスター、コーヒー淹れてよ<br>テキスト化ツール</h1>
+                <h1>マスター、コーヒー淹れてよ<br>テキスト化ツール(88版)</h1>
                 <div class="theme-switcher">
                     <label for="theme-toggle" class="theme-toggle-label">ダークモード</label>
                     <label class="switch">
